--- a/tutorial/templates/notifications.html
+++ b/tutorial/templates/notifications.html
@@ -6,12 +6,20 @@
   </head>
 
   <body>
+
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/photos">Photos</a></li>
+      <li><a href="/contributors">Contributors</a></li>
+    </ul>
+
     <h1>Notifications</h1>
 
     <!--The notification class currently doesn't actually mean anything-->
 
     {% for notification in notifications %}
     <div class="notification">
+      <p>{{notification.photo_name}}</p>
       <p>Object {{notification.event_type}} by {{notification.requester_email_address}}.</p>
       <p><small>{{notification.date.strftime('%B %d %Y %I:%M')}}</small></p>
     </div>
