--- a/tutorial/templates/notifications.html
+++ b/tutorial/templates/notifications.html
@@ -3,6 +3,7 @@
 
   <head>
     <title>Notifications/Home</title>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
   </head>
 
   <body>
@@ -17,9 +18,8 @@
     <!--The notification class currently doesn't actually mean anything-->
 
     {% for notification in notifications %}
-    <div class="notification">
-      <p>{{notification.message}}</p>
-      <p><small>{{notification.date.strftime('%B %d %Y %I:%M')}} UTC</small></p>
+    <div style="margin-left:20%;font-size:20px;" class="notification">
+      <p><small style="font-size:12px;">{{notification.date.strftime('%B %d %Y %I:%M')}} UTC: </small>{{notification.message}}</p>
     </div>
     {% endfor %}
 
